@@ -1,12 +1,12 @@
 module ActiveMerchant #:nodoc:
   module Billing #:nodoc:
     module Integrations #:nodoc:
-      module Dwolla 
+      module Dwolla
         autoload :Return, 'active_merchant/billing/integrations/dwolla/return.rb'
         autoload :Helper, 'active_merchant/billing/integrations/dwolla/helper.rb'
         autoload :Notification, 'active_merchant/billing/integrations/dwolla/notification.rb'
         autoload :Common, 'active_merchant/billing/integrations/dwolla/common.rb'
-       
+
         mattr_accessor :service_url
         self.service_url = 'https://www.dwolla.com/payment/pay'
 
