@@ -8,12 +8,8 @@ module ActiveMerchant #:nodoc:
         class Notification < ActiveMerchant::Billing::Integrations::Notification
           include Common
 
-          def initialize(data, options)
-            super
-          end
-
           def complete?
-            status == "Completed"
+            (status == "Completed")
           end
 
           def status
@@ -40,16 +36,16 @@ module ActiveMerchant #:nodoc:
             params['Error']
           end
 
-          # Was this a test transaction?
           def test?
             params['TestMode']
           end
 
-          def acknowledge      
+          def acknowledge
             true
           end
-        
-        private
+
+          private
+
           def parse(post)
             @raw = post.to_s
             json_post = JSON.parse(post)
